src/main/java/com/example/LibManage/Error/BookNotFoundException.java
package com.example.LibManage.Error;

public class BookNotFoundException extends RuntimeException{
    public BookNotFoundException() {
        super("Kitap mevcut değil");
    }
}
